--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@
 # gpt4all
 # langchain==0.0.255
 # gpt4all==1.0.2
-llama-cpp-python
+requests
+bs4
 # for mac, need to use 
 # CMAKE_ARGS="-DLLAMA_METAL=on" FORCE_CMAKE=1 pip install --upgrade --force-reinstall llama-cpp-python --no-cache-dir
 # most recent versions
